<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.UnsignedHomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/the_image_collage"
        android:scaleType="fitXY"
        android:src="@drawable/unsigned_user_page_collage" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:contentDescription="@string/the_page_color"
        android:scaleType="fitXY"
        android:src="@drawable/net_background_color" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/netflix_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/play_flex_icon"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toTopOf="@id/main" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/white"
            app:flow_horizontalAlign="start"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintTop_toTopOf="@id/logo" />


        <TextView
            android:id="@+id/unlimitedText"
            style="@style/UnsignedHomeBigText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/unlimited"
            app:layout_constraintBottom_toBottomOf="@id/movieAndTvText"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main" />

        <TextView
            android:id="@+id/movieAndTvText"
            style="@style/UnsignedHomeBigText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/movies_tv"
            app:layout_constraintBottom_toBottomOf="@id/showsAndMoreText"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main" />

        <TextView
            android:id="@+id/showsAndMoreText"
            style="@style/UnsignedHomeBigText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/shows_more"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/getStartedButton"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main" />

        <Button
            android:id="@+id/getStartedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="924dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#FF0000"
            android:text="@string/get_started"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/main"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>