<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Movie Poster -->
    <ImageView
        android:id="@+id/imgMoviePoster"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/movie_poster"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/no_image_found" />

    <!-- Movie Title -->
    <EditText
        android:id="@+id/etMovieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_background_light"
        android:hint="@string/enter_movie_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <!-- Movie Description -->
    <EditText
        android:id="@+id/etMovieDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_background_light"
        android:hint="@string/enter_movie_description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="50dp"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:visibility="gone" />

    <!-- Video Player -->
    <androidx.media3.ui.PlayerView
        android:id="@+id/video"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="10dp" />

    <!-- Categories RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGroupCategories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:background="@color/lightGray"
        android:padding="8dp" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSaveMovie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background_light"
            android:padding="12dp"
            android:text="@string/save"
            android:textColor="@color/black"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background_light"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
